Run test instead of itest to bypass linux docker issues. Will need to use a machine instance most likely and install java 15.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs:
       - read_cache_linux
       - run:
           name: "Run tests"
-          command: ./gradlew iTest
+          command: ./gradlew test
       - run:
           name: "Create Package deb"
           command: ./gradlew packageDeb
