--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,8 @@ jobs:
       - run:
           name: "Install fakeroot"
           command: |
-            apt-get install fakeroot
+            sudo apt-get update
+            sudo apt-get install fakeroot
       - run:
           name: "Run tests"
           command: ./gradlew test
