--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ jobs:
             sudo apt-get update
             sudo apt-get install fakeroot
       - run:
-          name: "Run test"
+          name: "Run lint check"
           command: ./gradlew ktlintCheck
       - run:
           name: "Run test"
