--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ composeVersion=1.6.11
 googleCommonProtos=2.45.1
 jacksonVersion=2.18.0
 jUnitVersion=5.11.1
-kotlinVersion=2.0.21
+kotlinVersion=2.1.0-Beta2
 kotlin.code.style=official
 mockkVersion=1.13.12
 protobufUtils=4.28.2
