--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,6 +75,10 @@ jobs:
         run: ./gradlew packageDmg --stacktrace
       - name: Notarize DMG
         run: ./gradlew notarizeDmg
+      - uses: actions/upload-artifact@v4
+        with:
+          name: notarize-dmg-output
+          path: build/notorization-output
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
