--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,8 @@ jobs:
     name: Mac build
     runs-on: macos-latest
     steps:
+      - name: Select Xcode version
+        run: sudo xcode-select -s '/Applications/Xcode_14.3.1.app/Contents/Developer'
       - name: Decode signing cert
         run: base64 -D -o cert.p12 <<< $SIGNING_CERT_TEMP
       - name: Create new keychain
