--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,12 @@ jobs:
         run: ./gradlew ktlintCheck
       - name: Run tests
         run: ./gradlew test
+      - name: Upload results
+        uses: actions/upload-artifact@v4
+        if: success() || failure()
+        with:
+          name: reports
+          path: build/reports
       - name: Create Package deb
         run: ./gradlew packageDeb --info
       - name: Upload build artifacts
