--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,12 +28,11 @@ jobs:
         run: ./gradlew ktlintCheck
       - name: Run tests
         run: ./gradlew test
-      - name: Upload results
-        uses: actions/upload-artifact@v4
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v5
         if: success() || failure()
         with:
-          name: reports
-          path: build/reports
+          report_paths: '**/build/test-results/test/TEST-*.xml'
       - name: Create Package deb
         run: ./gradlew packageDeb --info
       - name: Upload build artifacts
