--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,14 +43,6 @@ jobs:
 
 
   mac-build-arm:
-    env:
-      APPLE_ID_TEMP: ${{ secrets.APPLE_ID_TEMP }}
-      IDENTITY_TEMP: ${{ secrets.IDENTITY_TEMP }}
-      NOTARIZATION_PASSWORD_TEMP: ${{ secrets.NOTARIZATION_PASSWORD_TEMP }}
-      PROVIDER_TEMP: ${{ secrets.PROVIDER_TEMP }}
-      SIGNING_CERT_TEMP: ${{ secrets.SIGNING_CERT_TEMP }}
-      SIGNING_PASS_TEMP: ${{ secrets.SIGNING_PASS_TEMP }}
-      SIGN_APP: ${{ secrets.SIGN_APP }}
     name: Mac arm build
     runs-on: macos-latest
     uses: ./.github/workflows/mac-setup.yml
@@ -58,6 +50,14 @@ jobs:
       gradle-version: "8.1.1"
       java-version: "17"
       artifact-name: mac-arm-artifacts
+    secrets:
+      APPLE_ID_TEMP: ${{ secrets.APPLE_ID_TEMP }}
+      IDENTITY_TEMP: ${{ secrets.IDENTITY_TEMP }}
+      NOTARIZATION_PASSWORD_TEMP: ${{ secrets.NOTARIZATION_PASSWORD_TEMP }}
+      PROVIDER_TEMP: ${{ secrets.PROVIDER_TEMP }}
+      SIGNING_CERT_TEMP: ${{ secrets.SIGNING_CERT_TEMP }}
+      SIGNING_PASS_TEMP: ${{ secrets.SIGNING_PASS_TEMP }}
+      SIGN_APP: ${{ secrets.SIGN_APP }}
 
   mac-build-intel:
     env:
