--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,65 +39,52 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: linux-artifacts
-          path: build/libs
+          path: build/compose/binaries/main/deb/
 
-  mac-build:
-    env:
-      APPLE_ID_TEMP: ${{ secrets.APPLE_ID_TEMP }}
-      IDENTITY_TEMP: ${{ secrets.IDENTITY_TEMP }}
-      NOTARIZATION_PASSWORD_TEMP: ${{ secrets.NOTARIZATION_PASSWORD_TEMP }}
-      PROVIDER_TEMP: ${{ secrets.PROVIDER_TEMP }}
-      SIGNING_CERT_TEMP: ${{ secrets.SIGNING_CERT_TEMP }}
-      SIGNING_PASS_TEMP: ${{ secrets.SIGNING_PASS_TEMP }}
-      SIGN_APP: ${{ secrets.SIGN_APP }}
-    name: Mac build
-    runs-on: macos-latest
+  mac-build-arm:
+    name: Mac arm build
     needs: linux-build
-    steps:
-      - name: Decode signing cert
-        run: base64 -D -o cert.p12 <<< $SIGNING_CERT_TEMP
-      - name: Create new keychain
-        run: security create-keychain -p keychain-pass compose.keychain
-      - name: Import signing cert
-        run: security import ./cert.p12 -t agg -k compose.keychain -P $SIGNING_PASS_TEMP -A
-      - name: Make chain accessible
-        run: |
-          security list-keychains -s "compose.keychain"
-          security list-keychains
-          security default-keychain -s "compose.keychain"
-          security unlock-keychain -p "keychain-pass" "compose.keychain"
-          security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k keychain-pass
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Set up java
-        uses: actions/setup-java@v4
-        with:
-          distribution: corretto
-          java-version: 17
-      - name: Set up Gradle
-        uses: gradle/actions/setup-gradle@v4
-        with:
-          gradle-version: "8.1.1"
-      - name: Create DMG
-        run: ./gradlew packageDmg --stacktrace
-      - name: Notarize DMG
-        run: ./gradlew notarizeDmg
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: mac-artifacts
-          path: build/compose/binaries/main/dmg/
+    uses: ./.github/workflows/mac-setup.yml
+    with:
+      runner-type: macos-latest
+      gradle-version: "8.1.1"
+      java-version: "17"
+      artifact-name: mac-arm-artifacts
+    secrets: inherit
+
+  mac-build-intel:
+    name: Mac intel build
+    needs: linux-build
+    uses: ./.github/workflows/mac-setup.yml
+    with:
+      runner-type: macos-13
+      gradle-version: "8.1.1"
+      java-version: "17"
+      artifact-name: mac-intel-artifacts
+    secrets: inherit
 
   release:
     if: ${{ github.event_name == 'release' }}
     runs-on: ubuntu-latest
-    needs: mac-build
+    needs:
+      - mac-build-arm
+      - mac-build-intel
     steps:
-      - name: Download artifacts
+      - name: Download linux artifacts
         uses: actions/download-artifact@v4
         with:
-          path: artifacts
-          merge-multiple: true
+          name: linux-artifacts
+          path: artifacts/linux
+      - name: Download mac arm artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: mac-arm-artifacts
+          path: artifacts/mac-arm
+      - name: Download mac intel artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: mac-intel-artifacts
+          path: artifacts/mac-intel
       - name: Display structure of downloaded files
         run: ls -R artifacts
       - name: Publish Release
