--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,10 @@
+org.gradle.java.home=/Library/Java/JavaVirtualMachines/amazon-corretto-21.jdk/Contents/Home
 assertJVersion=3.26.3
-composeVersion=1.6.11
+composeVersion=1.8.0
 googleCommonProtos=2.45.1
 jacksonVersion=2.18.0
 jUnitVersion=5.11.1
-kotlinVersion=2.0.21
+kotlinVersion=2.3.10
 kotlin.code.style=official
 mockkVersion=1.13.12
 protobufUtils=4.28.2
