--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,11 +19,13 @@ jobs:
         uses: actions/setup-java@v4
         with:
           distribution: corretto
-          java-version: 17
+          java-version: 21
       - name: Set up Gradle
         uses: gradle/actions/setup-gradle@v4
-        with:
-          gradle-version: "8.1.1"
+      - name: Verify Docker
+        run: |
+          docker version
+          docker ps
       - name: Run lint check
         run: ./gradlew ktlintCheck
       - name: Run tests
@@ -47,8 +49,7 @@ jobs:
     uses: ./.github/workflows/mac-setup.yml
     with:
       runner-type: macos-latest
-      gradle-version: "8.1.1"
-      java-version: "17"
+      java-version: "21"
       artifact-name: mac-arm-artifacts
     secrets: inherit
 
@@ -58,8 +59,7 @@ jobs:
     uses: ./.github/workflows/mac-setup.yml
     with:
       runner-type: macos-13
-      gradle-version: "8.1.1"
-      java-version: "17"
+      java-version: "21"
       artifact-name: mac-intel-artifacts
     secrets: inherit
 
